--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,12 @@
   min-width: 120px;
   min-height: 40px;
   border-radius: 20px;
-  background-color: #3a3d42;
+  background-color: #282c34;
   color: white;
   font-size: larger;
+  cursor: pointer;
+}
+
+.submit-button:hover{
+  background-color: #3a3d42;
 }
