--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,7 @@
   font-size: calc(10px + 2vmin);
 }
 
-.header-tab-selected {
-  background-color: #3a3d42;
-}
-
+.header-tab-selected,
 .header-tab:hover {
   background-color: #3a3d42;
 }
@@ -68,15 +65,12 @@
   font-size: calc(10px + 2vmin);
 }
 
-.subheader-tab-selected {
-  background-color: #4c576d;
-}
-
+.subheader-tab-selected,
 .subheader-tab:hover {
   background-color: #4c576d;
 }
 
-.input-with-label{
+.input-with-label {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -84,29 +78,29 @@
   align-self: center;
 }
 
-.inputs-container{
+.inputs-container {
   width: 100%;
   justify-content: center;
   display: flex;
   flex-direction: column;
 }
 
-.input-label{
+.input-label {
   min-width: 300px;
   text-align: initial;
 }
 
-.input-box-container{
+.input-box-container {
   display: flex;
   align-items: center;
 }
 
-.input-box{
+.input-box {
   border-radius: 5px;
   min-height: 20px;
 }
 
-.submit-button{
+.submit-button {
   min-width: 120px;
   min-height: 40px;
   border-radius: 20px;
@@ -116,6 +110,32 @@
   cursor: pointer;
 }
 
-.submit-button:hover{
+.submit-button:hover {
   background-color: #3a3d42;
+}
+
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 0 50px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.active,
+.collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  padding: 0 18px;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
