default sorting by points done.

--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 2px 0;
+  margin-top: 2px;
 }
 
 .active,
@@ -139,7 +139,6 @@
 }
 
 .content {
-  padding: 0 18px;
   overflow: hidden;
   background-color: #f1f1f1;
   min-height: 100px;
